Implement function in skeleton scrape script and load and process images

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ Keras = "==2.3.1"
 matplotlib = "==3.2.1"
 numpy = "==1.18.1"
 pandas = "==0.25.3"
+Pillow = "==2.2.1"
 praw = "==7.1.0"
 pydot = "==1.4.1"
 seaborn = "*"
